--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-   <h1>Hello html</h1> 
+   <h1>Hello html</h1>
+   <img src="img/dart.jpg" alt="dart">
 </body>
 </html>
